package ar.edu.utn.ba.ddsi.sales_service.entities;

public interface Tax {
    public double calculateTax(Product product);
}
